All_Component_DX/force-app/main/default/objects/Service_Group__c/Service_Group__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Service Group enables definition of your entire service organization. Service group definition includes details of group members, products in which the group specializes in, the skills available in the group, typical service delivery costs as well as geographies covered by the group. Service orders are assigned to a service group and optionally to group members. At the time of assignment, all the above parameters can be considered by the support center engineer(s) to choose the most suitable group that can address the customer problem.</description>
    <label>Service Team</label>
    <nameField>
        <label>Service Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>