All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>