All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information about the service group</description>
    <inlineHelpText>Additional information about the service group</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>