All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address for the service team</description>
    <inlineHelpText>Email address for the service team</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>