All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <description>Any internal (typically financials) code your organization uses to refer to this group</description>
    <inlineHelpText>Any internal code your organization uses to refer to this group</inlineHelpText>
    <label>Group Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>