All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <description>Indicates if this is a group Internal to your organization, a Partner company providing the services on your behalf, or a combination of Both.</description>
    <inlineHelpText>Indicates if this is a group Internal to your organization, a Partner company providing the services on your behalf, or a combination of Both.</inlineHelpText>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>