All_Component_DX/force-app/main/default/objects/Service_Group__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>“State&apos; part of the service team&apos;s address</description>
    <inlineHelpText>“State&apos; part of the service team&apos;s address</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>