All_Component_DX/force-app/main/default/objects/Service_Group__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <label>Equipment</label>
</RecordType>